--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.25"
+surf = "2.3.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +13,3 @@ futures = "0.3.25"
 version = "4.0.18"
 default-features = false
 features = ["cargo", "std"]
-
-[dependencies.reqwest]
-version = "0.11.12"
-default-features = false
