--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,6 @@ edition = "2021"
 [dependencies]
 futures = "0.3.25"
 surf = "2.3.2"
+clap = { version = "4.0.18", features = ["std", "derive"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies.clap]
-version = "4.0.18"
-default-features = false
-features = ["cargo", "std"]
